--- a/app/background/background.html
+++ b/app/background/background.html
@@ -3,7 +3,7 @@
 
 <head>
   <script src='../../node_modules/jquery/dist/jquery.min.js'></script>
-    <script type="text/javascript" src="../scripts/background.js"></script>
+    <script type="text/javascript" src="../scripts/contentscript.js"></script>
 </head>
 
 
